<resources>
    <string name="app_name">BusinnesCard</string>
    <string name="label_businnes_card">Cartão de Visita</string>
    <string name="label_description_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_sucess">Cartão Criado com Sucesso</string>
    <string name="label_share">Compartilhar</string>
    <string name="label_share_to">Compartilhar</string>
    <string-array name="feelings">
    <item name="option_1">#0000CD</item>
    <item name="option_2">#006400</item>
    <item name="option_3">#8B4513</item>
    </string-array>
</resources>